refactor:[all] ドライブ関連のAPIエンドポイントを整理し、不要なコードを削除
