# server/openapi.yaml
@@ -172,63 +172,6 @@ paths:
         接続を削除
       tags:
         - DriveConnection
-  /api/drive/list:
-    get:
-      operationId: FolderController_listFolder
-      parameters:
-        - name: folderId
-          required: false
-          in: query
-          schema:
-            type: string
-        - name: connectionId
-          required: true
-          in: query
-          schema:
-            type: string
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FolderListDto'
-      summary: |-
-        GET /api/drive/list
-        フォルダ内容を取得
-      tags:
-        - Folder
-  /api/drive/search:
-    get:
-      operationId: FolderController_search
-      parameters:
-        - name: connectionId
-          required: true
-          in: query
-          schema:
-            type: string
-        - name: folderId
-          required: true
-          in: query
-          schema:
-            type: string
-        - name: query
-          required: true
-          in: query
-          schema:
-            type: string
-      responses:
-        '200':
-          description: ''
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/FolderListDto'
-      summary: |-
-        GET /api/drive/search
-        フォルダ内でキーワード検索
-      tags:
-        - Folder
   /api/drive/connections/{connectionId}/files:
     get:
       operationId: FolderController_listFolderByConnection
